--- a/maromba-web/styles.css
+++ b/maromba-web/styles.css
@@ -16,7 +16,14 @@ body {
 	display: grid;
 	place-items: center;
 	margin: 0;
-		background: linear-gradient(135deg, #161616, #3e065f, #700b97, #700b97, #8e05c2);
+	background: linear-gradient(
+		135deg,
+		#161616,
+		#3e065f,
+		#700b97,
+		#700b97,
+		#8e05c2
+	);
 	background-size: 300%;
 	animation: colors 10s ease infinite;
 	color: #f9f9f9;
@@ -85,6 +92,13 @@ h1 {
 	}
 }
 
+@media (width <= 425px) {
+	.buttons-div {
+		flex-direction: column-reverse;
+		gap: 15px !important;
+	}
+}
+
 #root {
 	width: 100%;
 	height: 100%;
@@ -106,10 +120,15 @@ h1 {
 	margin-bottom: 0px;
 }
 
+.buttons-div {
+	margin-top: 20px;
+	gap: 30px;
+	display: flex;
+}
+
 .main-button {
 	padding: 10px 20px;
 	color: white;
-	margin-top: 15px;
 	background-color: #8e05c2;
 	width: auto !important;
 	height: auto;
@@ -129,7 +148,6 @@ h1 {
 .second-button {
 	padding: 10px 20px;
 	color: white;
-	margin-top: 15px;
 	background-color: transparent;
 	width: auto !important;
 	height: auto;
@@ -165,4 +183,92 @@ h1 {
 
 ::-webkit-scrollbar-thumb:hover {
 	background-color: #909090;
+}
+
+.panel {
+	border-radius: 20px;
+	background: #161616;
+	text-align: center;
+	box-shadow: rgb(0 0 0 / 50%) 0px 0px 20px;
+	width: 60%;
+	height: 80%;
+	margin-left: auto;
+	margin-right: auto;
+	opacity: 0.7;
+	display: grid;
+	align-items: center;
+	overflow: hidden;
+	min-width: 235px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.panel > h2 {
+	font-size: 36px;
+	font-weight: 500;
+	margin: 0 0 4px;
+}
+
+.panel > h3 {
+	color: rgba(255, 255, 255, 0.38);
+	margin: 0 0 30px;
+	font-weight: 500;
+	font-size: 18px;
+}
+
+.form-container {
+	display: grid;
+	place-items: center;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	overflow-y: auto;
+	display: grid;
+	grid-template-rows: 1fr auto;
+	padding: 20px 30px;
+	justify-content: center;
+    align-items: start;
+    justify-items: center;
+}
+
+.form-content {
+	display: grid;
+	gap: 15px;
+	align-content: start;
+}
+
+.search-new-div {
+	width: 100%;
+	display: flex;
+}
+
+.new-button {
+	width: 33px	;
+	margin-right: 30px;
+	margin-left: 40px;
+	background-color: transparent;
+	border: 0px;
+	color: white;
+}
+
+.new-button:hover {
+	scale: 1.2;
+}
+
+@media (width <= 1230px) {
+	.panel {
+		width: 70%;
+	}
+}
+
+@media (width <= 990px) {
+	.panel {
+		width: 80%;
+	}
+}
+
+@media (width <= 700px) {
+	.panel {
+		width: 100%;
+	}
 }
